tests/rosetta/out/C/4-rings-or-4-squares-puzzle.error
cc: exit status 1
/tmp/4-rings-or-4-squares-puzzle.c:40:9: error: expected identifier or ‘(’ before ‘)’ token
   40 |   int (*)(int) count;
      |         ^
/tmp/4-rings-or-4-squares-puzzle.c: In function ‘getCombs’:
/tmp/4-rings-or-4-squares-puzzle.c:121:23: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
  121 |               valid = 0;
      |                       ^
/tmp/4-rings-or-4-squares-puzzle.c:129:24: error: ‘tmp_item_t’ has no member named ‘count’
  129 |   return (tmp_item_t){.count = count, .list = valid};
      |                        ^~~~~
/tmp/4-rings-or-4-squares-puzzle.c:129:47: error: incompatible types when initializing type ‘int’ using type ‘list_int’
  129 |   return (tmp_item_t){.count = count, .list = valid};
      |                                               ^~~~~
/tmp/4-rings-or-4-squares-puzzle.c: In function ‘_mochi_main’:
/tmp/4-rings-or-4-squares-puzzle.c:136:23: error: request for member ‘data’ in something not a structure or union
  136 |   char *tmp2 = _str(r1.data["count"]);
      |                       ^
/tmp/4-rings-or-4-squares-puzzle.c:139:20: error: request for member ‘data’ in something not a structure or union
  139 |   printf("%d\n", r1.data["list"]);
      |                    ^
/tmp/4-rings-or-4-squares-puzzle.c:140:23: error: request for member ‘data’ in something not a structure or union
  140 |   char *tmp4 = _str(r2.data["count"]);
      |                       ^
/tmp/4-rings-or-4-squares-puzzle.c:143:20: error: request for member ‘data’ in something not a structure or union
  143 |   printf("%d\n", r2.data["list"]);
      |                    ^
/tmp/4-rings-or-4-squares-puzzle.c:144:23: error: request for member ‘data’ in something not a structure or union
  144 |   char *tmp6 = _str(r3.data["count"]);
      |                       ^
